--- a/UTS_Pengolahan_Citra.ipynb
+++ b/UTS_Pengolahan_Citra.ipynb
@@ -53,7 +53,7 @@
       },
       "outputs": [],
       "source": [
-        "img = cv2.imread('/content/drive/MyDrive/uts_name.jpeg')\n"
+        "img = cv2.imread('uts_name.jpeg')\n"
       ]
     },
     {
